fixed article image overlapping content when resizing

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -244,8 +244,10 @@ body
       position: absolute
       top: 0
       left: 0
-      right: 0
-      bottom: 0
+      //right: 0
+      //bottom: 0
+      width: 100%
+      height: 100%
       text-indent: -9999px
       padding-top: 33%
       z-index: 1
